2011-07-08  Petr Machata  <pmachata@redhat.com>

	* common.h (struct Event_Handler, install_event_handler)
	(destroy_event_handler): New interfaces for definition of custom
	event handler.
	* handle_event.c (handle_event): Honor custom handler.
	* proc.c (install_event_handler, destroy_event_handler):
	Implementation.

2011-06-01  Petr Machata  <pmachata@redhat.com>

	* sysdeps/linux-gnu/events.c (delayed_events, end_delayed_events):
	New variables for event queue.
	(enque_event): To add new event into the queue.
	(next_qd_event, each_qd_event, enum ecb_status): Iteration interfaces.
	(next_event): Instead of waitpid, pop event que if there are
	events waiting.
	* ltrace.h (Event.next): New field to support event chaining.

2011-05-30  Petr Machata  <pmachata@redhat.com>

	* common.h (enable_breakpoint, disable_breakpoint)
	(continue_enabling_breakpoint): Pass Process * instead of pid.
	* breakpoints.c, sysdeps/linux-gnu/breakpoint.c: Adapt.
	* sysdeps/linux-gnu/trace.c: Adapt.

2011-05-12  Petr Machata  <pmachata@redhat.com>

	* common.h: include config.h

2011-05-09  Petr Machata  <pmachata@redhat.com>

	* common.h (breakpoints_init, insert_breakpoint, open_program):
	Pass an extra argument that defines whether we should enable
	breakpoints.

2011-05-09  Petr Machata  <pmachata@redhat.com>

	* execute_program.c (execute_program): Returns pid_t.
	* proc.c (open_program): Always assumes that pid is != 0.
	* common.h, libltrace.c (ltrace_init): Adapt to above.

2011-05-09  Petr Machata  <pmachata@redhat.com>

	* common.h (struct Process): Drop field type_being_displayed.

2011-05-06  Petr Machata  <pmachata@redhat.com>

	* common.h (struct Process.leader): Points to leader thread of the
	process.
	(process_leader, process_tasks): For querying threads of process.
	(process_status, process_stopped): For querying task status.
	(task_kill): For sending signals to a single task.
	(each_task): Like each_process, but for tasks of a process.